RESOLVED FIXED234433
[WPE] Kinetic scrolling doesn't work in overflow scrolling
https://bugs.webkit.org/show_bug.cgi?id=234433
Summary [WPE] Kinetic scrolling doesn't work in overflow scrolling
johnfactotum1
Reported 2021-12-17 06:41:34 PST
WebKitGTK only does kinetic scrolling when scrolling the whole document, but not when scrolling other elements with `overflow: scroll`.
Attachments
johnfactotum1
Comment 1 2021-12-20 02:53:07 PST
Another difference I noticed between page scrolling and overflow scrolling: when using arrow keys and PgUp/PgDn to scroll, page scrolling is animated (like `scroll-behavior: smooth`), but with overflow scrolling, it scrolls instantly without any animation.
Pablo Saavedra
Comment 3 2022-03-28 07:38:56 PDT
I can confirm this defect is also happens in WebKit WPE.Tested in: * https://people.igalia.com/psaavedra/scroll_horizontal.html * https://people.igalia.com/psaavedra/scroll.html
Alice Mikhaylenko
Comment 4 2022-03-28 13:09:21 PDT
I can see kinetic scrolling with your samples with WebKitGTK at least.
Pablo Saavedra
Comment 5 2022-03-31 14:30:54 PDT
(In reply to Alexander Mikhaylenko from comment #4) > I can see kinetic scrolling with your samples with WebKitGTK at least. Not the case of WPE. Not at least using a build from trunk.
johnfactotum1
Comment 6 2022-03-31 21:55:17 PDT
Tested on Arch Linux, with webkit2gtk-4.1 and webkit2gtk-5.0 2.36.0. Kinetic scrolling seems to be working with GTK 4. But overflow scrolling with PgUp/PgDn still has no animation. On GTK 3, overflow scrolling is neither kinetic nor animated.
Alice Mikhaylenko
Comment 7 2022-04-01 04:35:48 PDT
Huh. Didn't think it would depend on GTK3/4. I see they are using different codepaths when creating a NativeWebWheelEvent though, I guess it has to do with that then.
Pablo Saavedra
Comment 8 2022-08-25 04:42:38 PDT
Update: Works on Ubuntu for WebkitGTK (libwebkit2gtk-4.0-37:amd64 2.36.6-0ubuntu0.22.04.1)
Pablo Saavedra
Comment 9 2022-08-25 07:18:16 PDT
Update: * Works on Ubuntu for WebkitGTK (libwebkit2gtk-4.0-37:amd64 2.36.6-0ubuntu0.22.04.1) * But not kinetic at all in overflow elements for (libwpewebkit-1.0-3:amd64 2.36.0-2ubuntu3)
Pablo Saavedra
Comment 10 2022-08-29 06:51:36 PDT
EWS
Comment 11 2022-09-02 07:47:14 PDT
Committed 254099@main (431d9f7c6bc7): <https://commits.webkit.org/254099@main> Reviewed commits have been landed. Closing PR #3770 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.