[WPE] Kinetic scrolling doesn't work in overflow scrolling https://bugs.webkit.org/show_bug.cgi?id=234433

This extends the fix applied on bug 223133 "[GTK] Kinetic iframe async
scrolling does not work" [1] to the rest of the ports using nicosia.

For WPE (libwpe), the end of momentum scroll event can scroll contents even if
with a delta of 0. The explanation is in the implementation of the libwpe
'handle_axis_event()' API method in /Source/WebKit/UIProcess/API/wpe/WPEView.cpp:

   We treat an axis motion event with a value of zero to be equivalent to a 'stop'
   event. Motion events with zero motion don't exist naturally,
   so this allows a backend to express 'stop' events without changing API.
   The wheel event phase is adjusted accordingly.

[1] https://bugs.webkit.org/show_bug.cgi?id=223133

Reviewed by Carlos Garcia Campos.

* Source/WebCore/page/scrolling/ScrollingTreeScrollingNode.cpp:
(WebCore::ScrollingTreeScrollingNode::eventCanScrollContents const):

Canonical link: https://commits.webkit.org/254099@main